codemp/generated/game/bg_saberLoad.h

static void Saber_ParseNoRollStab( saberInfo_t *saber, const char **p );
static void Saber_ParseNoPullAttack( saberInfo_t *saber, const char **p );
static void Saber_ParseNoBackAttack( saberInfo_t *saber, const char **p );
static void Saber_ParseNoStabDown( saberInfo_t *saber, const char **p );
static void Saber_ParseNoWallRuns( saberInfo_t *saber, const char **p );
static void Saber_ParseNoWallFlips( saberInfo_t *saber, const char **p );
static void Saber_ParseNoWallGrab( saberInfo_t *saber, const char **p );
static void Saber_ParseNoRolls( saberInfo_t *saber, const char **p );
static void Saber_ParseNoFlips( saberInfo_t *saber, const char **p );
static void Saber_ParseNoCartwheels( saberInfo_t *saber, const char **p );
static void Saber_ParseNoKicks( saberInfo_t *saber, const char **p );
static void Saber_ParseNoMirrorAttacks( saberInfo_t *saber, const char **p );
static void Saber_ParseOnInWater( saberInfo_t *saber, const char **p );
static void Saber_ParseNotInMP( saberInfo_t *saber, const char **p );
static void Saber_ParseBladeStyle2Start( saberInfo_t *saber, const char **p );
static void Saber_ParseNoWallMarks( saberInfo_t *saber, const char **p );
static void Saber_ParseNoDLight( saberInfo_t *saber, const char **p );
static void Saber_ParseNoBlade( saberInfo_t *saber, const char **p );
static void Saber_ParseTrailStyle( saberInfo_t *saber, const char **p );
static void Saber_ParseG2MarksShader( saberInfo_t *saber, const char **p );
static void Saber_ParseG2WeaponMarkShader( saberInfo_t *saber, const char **p );
static void Saber_ParseKnockbackScale( saberInfo_t *saber, const char **p );
static void Saber_ParseDamageScale( saberInfo_t *saber, const char **p );
static void Saber_ParseNoDismemberment( saberInfo_t *saber, const char **p );
static void Saber_ParseNoIdleEffect( saberInfo_t *saber, const char **p );
static void Saber_ParseAlwaysBlock( saberInfo_t *saber, const char **p );
static void Saber_ParseNoManualDeactivate( saberInfo_t *saber, const char **p );
static void Saber_ParseTransitionDamage( saberInfo_t *saber, const char **p );
static void Saber_ParseSplashRadius( saberInfo_t *saber, const char **p );
static void Saber_ParseSplashDamage( saberInfo_t *saber, const char **p );
static void Saber_ParseSplashKnockback( saberInfo_t *saber, const char **p );
static void Saber_ParseHitSound1( saberInfo_t *saber, const char **p );
static void Saber_ParseHitSound2( saberInfo_t *saber, const char **p );
static void Saber_ParseHitSound3( saberInfo_t *saber, const char **p );
static void Saber_ParseBlockSound1( saberInfo_t *saber, const char **p );
static void Saber_ParseBlockSound2( saberInfo_t *saber, const char **p );
static void Saber_ParseBlockSound3( saberInfo_t *saber, const char **p );
static void Saber_ParseBounceSound1( saberInfo_t *saber, const char **p );
static void Saber_ParseBounceSound2( saberInfo_t *saber, const char **p );
static void Saber_ParseBounceSound3( saberInfo_t *saber, const char **p );
static void Saber_ParseBlockEffect( saberInfo_t *saber, const char **p );
static void Saber_ParseHitPersonEffect( saberInfo_t *saber, const char **p );
static void Saber_ParseHitOtherEffect( saberInfo_t *saber, const char **p );
static void Saber_ParseBladeEffect( saberInfo_t *saber, const char **p );
static void Saber_ParseNoClashFlare( saberInfo_t *saber, const char **p );
static void Saber_ParseNoWallMarks2( saberInfo_t *saber, const char **p );
static void Saber_ParseNoDLight2( saberInfo_t *saber, const char **p );
static void Saber_ParseNoBlade2( saberInfo_t *saber, const char **p );
static void Saber_ParseTrailStyle2( saberInfo_t *saber, const char **p );
static void Saber_ParseG2MarksShader2( saberInfo_t *saber, const char **p );
static void Saber_ParseG2WeaponMarkShader2( saberInfo_t *saber, const char **p );
static void Saber_ParseKnockbackScale2( saberInfo_t *saber, const char **p );
static void Saber_ParseDamageScale2( saberInfo_t *saber, const char **p );
static void Saber_ParseNoDismemberment2( saberInfo_t *saber, const char **p );
static void Saber_ParseNoIdleEffect2( saberInfo_t *saber, const char **p );
static void Saber_ParseAlwaysBlock2( saberInfo_t *saber, const char **p );
static void Saber_ParseNoManualDeactivate2( saberInfo_t *saber, const char **p );
static void Saber_ParseTransitionDamage2( saberInfo_t *saber, const char **p );
static void Saber_ParseSplashRadius2( saberInfo_t *saber, const char **p );
static void Saber_ParseSplashDamage2( saberInfo_t *saber, const char **p );
static void Saber_ParseSplashKnockback2( saberInfo_t *saber, const char **p );
static void Saber_ParseHit2Sound1( saberInfo_t *saber, const char **p );
static void Saber_ParseHit2Sound2( saberInfo_t *saber, const char **p );
static void Saber_ParseHit2Sound3( saberInfo_t *saber, const char **p );
static void Saber_ParseBlock2Sound1( saberInfo_t *saber, const char **p );
static void Saber_ParseBlock2Sound2( saberInfo_t *saber, const char **p );
static void Saber_ParseBlock2Sound3( saberInfo_t *saber, const char **p );
static void Saber_ParseBounce2Sound1( saberInfo_t *saber, const char **p );
static void Saber_ParseBounce2Sound2( saberInfo_t *saber, const char **p );
static void Saber_ParseBounce2Sound3( saberInfo_t *saber, const char **p );
static void Saber_ParseBlockEffect2( saberInfo_t *saber, const char **p );
static void Saber_ParseHitPersonEffect2( saberInfo_t *saber, const char **p );
static void Saber_ParseHitOtherEffect2( saberInfo_t *saber, const char **p );
static void Saber_ParseBladeEffect2( saberInfo_t *saber, const char **p );
static void Saber_ParseNoClashFlare2( saberInfo_t *saber, const char **p );
static int KeywordHash_Key( const char *keyword );
static void KeywordHash_Add( keywordHash_t *table[], keywordHash_t *key );
static keywordHash_t *KeywordHash_Find( keywordHash_t *table[], const char *keyword );
static void WP_SaberSetupKeywordHash();
qboolean WP_SaberParseParms( const char *saberName, saberInfo_t *saber );
qboolean WP_SaberParseParm( const char *saberName, const char *parmname, char *saberData );
qboolean WP_SaberValidForPlayerInMP( const char *saberName );
void WP_RemoveSaber( saberInfo_t *sabers, int saberNum );
void WP_SetSaber( int entNum, saberInfo_t *sabers, int saberNum, const char *saberName );
void WP_SaberSetColor( saberInfo_t *sabers, int saberNum, int bladeNum, char *colorName );
void WP_SaberLoadParms();