codemp/julia/generated/game/bg_saberLoad.jl

Saber_ParseNoRollStab( saber_, p_ ) = ccall((:Saber_ParseNoRollStab, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoPullAttack( saber_, p_ ) = ccall((:Saber_ParseNoPullAttack, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoBackAttack( saber_, p_ ) = ccall((:Saber_ParseNoBackAttack, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoStabDown( saber_, p_ ) = ccall((:Saber_ParseNoStabDown, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoWallRuns( saber_, p_ ) = ccall((:Saber_ParseNoWallRuns, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoWallFlips( saber_, p_ ) = ccall((:Saber_ParseNoWallFlips, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoWallGrab( saber_, p_ ) = ccall((:Saber_ParseNoWallGrab, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoRolls( saber_, p_ ) = ccall((:Saber_ParseNoRolls, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoFlips( saber_, p_ ) = ccall((:Saber_ParseNoFlips, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoCartwheels( saber_, p_ ) = ccall((:Saber_ParseNoCartwheels, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoKicks( saber_, p_ ) = ccall((:Saber_ParseNoKicks, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoMirrorAttacks( saber_, p_ ) = ccall((:Saber_ParseNoMirrorAttacks, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseOnInWater( saber_, p_ ) = ccall((:Saber_ParseOnInWater, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNotInMP( saber_, p_ ) = ccall((:Saber_ParseNotInMP, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBladeStyle2Start( saber_, p_ ) = ccall((:Saber_ParseBladeStyle2Start, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoWallMarks( saber_, p_ ) = ccall((:Saber_ParseNoWallMarks, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoDLight( saber_, p_ ) = ccall((:Saber_ParseNoDLight, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoBlade( saber_, p_ ) = ccall((:Saber_ParseNoBlade, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseTrailStyle( saber_, p_ ) = ccall((:Saber_ParseTrailStyle, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseG2MarksShader( saber_, p_ ) = ccall((:Saber_ParseG2MarksShader, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseG2WeaponMarkShader( saber_, p_ ) = ccall((:Saber_ParseG2WeaponMarkShader, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseKnockbackScale( saber_, p_ ) = ccall((:Saber_ParseKnockbackScale, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseDamageScale( saber_, p_ ) = ccall((:Saber_ParseDamageScale, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoDismemberment( saber_, p_ ) = ccall((:Saber_ParseNoDismemberment, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoIdleEffect( saber_, p_ ) = ccall((:Saber_ParseNoIdleEffect, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseAlwaysBlock( saber_, p_ ) = ccall((:Saber_ParseAlwaysBlock, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoManualDeactivate( saber_, p_ ) = ccall((:Saber_ParseNoManualDeactivate, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseTransitionDamage( saber_, p_ ) = ccall((:Saber_ParseTransitionDamage, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSplashRadius( saber_, p_ ) = ccall((:Saber_ParseSplashRadius, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSplashDamage( saber_, p_ ) = ccall((:Saber_ParseSplashDamage, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSplashKnockback( saber_, p_ ) = ccall((:Saber_ParseSplashKnockback, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitSound1( saber_, p_ ) = ccall((:Saber_ParseHitSound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitSound2( saber_, p_ ) = ccall((:Saber_ParseHitSound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitSound3( saber_, p_ ) = ccall((:Saber_ParseHitSound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlockSound1( saber_, p_ ) = ccall((:Saber_ParseBlockSound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlockSound2( saber_, p_ ) = ccall((:Saber_ParseBlockSound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlockSound3( saber_, p_ ) = ccall((:Saber_ParseBlockSound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounceSound1( saber_, p_ ) = ccall((:Saber_ParseBounceSound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounceSound2( saber_, p_ ) = ccall((:Saber_ParseBounceSound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounceSound3( saber_, p_ ) = ccall((:Saber_ParseBounceSound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlockEffect( saber_, p_ ) = ccall((:Saber_ParseBlockEffect, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitPersonEffect( saber_, p_ ) = ccall((:Saber_ParseHitPersonEffect, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitOtherEffect( saber_, p_ ) = ccall((:Saber_ParseHitOtherEffect, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBladeEffect( saber_, p_ ) = ccall((:Saber_ParseBladeEffect, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoClashFlare( saber_, p_ ) = ccall((:Saber_ParseNoClashFlare, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoWallMarks2( saber_, p_ ) = ccall((:Saber_ParseNoWallMarks2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoDLight2( saber_, p_ ) = ccall((:Saber_ParseNoDLight2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoBlade2( saber_, p_ ) = ccall((:Saber_ParseNoBlade2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseTrailStyle2( saber_, p_ ) = ccall((:Saber_ParseTrailStyle2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseG2MarksShader2( saber_, p_ ) = ccall((:Saber_ParseG2MarksShader2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseG2WeaponMarkShader2( saber_, p_ ) = ccall((:Saber_ParseG2WeaponMarkShader2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseKnockbackScale2( saber_, p_ ) = ccall((:Saber_ParseKnockbackScale2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseDamageScale2( saber_, p_ ) = ccall((:Saber_ParseDamageScale2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoDismemberment2( saber_, p_ ) = ccall((:Saber_ParseNoDismemberment2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoIdleEffect2( saber_, p_ ) = ccall((:Saber_ParseNoIdleEffect2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseAlwaysBlock2( saber_, p_ ) = ccall((:Saber_ParseAlwaysBlock2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoManualDeactivate2( saber_, p_ ) = ccall((:Saber_ParseNoManualDeactivate2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseTransitionDamage2( saber_, p_ ) = ccall((:Saber_ParseTransitionDamage2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSplashRadius2( saber_, p_ ) = ccall((:Saber_ParseSplashRadius2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSplashDamage2( saber_, p_ ) = ccall((:Saber_ParseSplashDamage2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSplashKnockback2( saber_, p_ ) = ccall((:Saber_ParseSplashKnockback2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHit2Sound1( saber_, p_ ) = ccall((:Saber_ParseHit2Sound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHit2Sound2( saber_, p_ ) = ccall((:Saber_ParseHit2Sound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHit2Sound3( saber_, p_ ) = ccall((:Saber_ParseHit2Sound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlock2Sound1( saber_, p_ ) = ccall((:Saber_ParseBlock2Sound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlock2Sound2( saber_, p_ ) = ccall((:Saber_ParseBlock2Sound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlock2Sound3( saber_, p_ ) = ccall((:Saber_ParseBlock2Sound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounce2Sound1( saber_, p_ ) = ccall((:Saber_ParseBounce2Sound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounce2Sound2( saber_, p_ ) = ccall((:Saber_ParseBounce2Sound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounce2Sound3( saber_, p_ ) = ccall((:Saber_ParseBounce2Sound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlockEffect2( saber_, p_ ) = ccall((:Saber_ParseBlockEffect2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitPersonEffect2( saber_, p_ ) = ccall((:Saber_ParseHitPersonEffect2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseHitOtherEffect2( saber_, p_ ) = ccall((:Saber_ParseHitOtherEffect2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBladeEffect2( saber_, p_ ) = ccall((:Saber_ParseBladeEffect2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNoClashFlare2( saber_, p_ ) = ccall((:Saber_ParseNoClashFlare2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
KeywordHash_Key( keyword_ ) = ccall((:KeywordHash_Key, lib), Int32, ( Ptr{Char},  ), keyword_ );
KeywordHash_Add( table_, key_ ) = ccall((:KeywordHash_Add, lib), Void, ( Ptr{keywordHash_t}, Ptr{keywordHash_t},  ), table_, key_ );
KeywordHash_Find( table_, keyword_ ) = ccall((:KeywordHash_Find, lib), keywordHash_t, ( Ptr{keywordHash_t}, Ptr{Char},  ), table_, keyword_ );
WP_SaberSetupKeywordHash() = ccall((:WP_SaberSetupKeywordHash, lib), Void, (),  );
WP_SaberParseParms( saberName_, saber_ ) = ccall((:WP_SaberParseParms, lib), qboolean, ( Ptr{Char}, Ptr{saberInfo_t},  ), saberName_, saber_ );
WP_SaberParseParm( saberName_, parmname_, saberData_ ) = ccall((:WP_SaberParseParm, lib), qboolean, ( Ptr{Char}, Ptr{Char}, Ptr{Char},  ), saberName_, parmname_, saberData_ );
WP_SaberValidForPlayerInMP( saberName_ ) = ccall((:WP_SaberValidForPlayerInMP, lib), qboolean, ( Ptr{Char},  ), saberName_ );
WP_RemoveSaber( sabers_, saberNum_ ) = ccall((:WP_RemoveSaber, lib), Void, ( Ptr{saberInfo_t}, Int32,  ), sabers_, saberNum_ );
WP_SetSaber( entNum_, sabers_, saberNum_, saberName_ ) = ccall((:WP_SetSaber, lib), Void, ( Int32, Ptr{saberInfo_t}, Int32, Ptr{Char},  ), entNum_, sabers_, saberNum_, saberName_ );
WP_SaberSetColor( sabers_, saberNum_, bladeNum_, colorName_ ) = ccall((:WP_SaberSetColor, lib), Void, ( Ptr{saberInfo_t}, Int32, Int32, Ptr{Char},  ), sabers_, saberNum_, bladeNum_, colorName_ );
WP_SaberLoadParms() = ccall((:WP_SaberLoadParms, lib), Void, (),  );
